[package]
name = "bae-1mil-site"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "http2"] }
minijinja = { version = "2.0.1", default-features = false, features = [
  "builtins",
  "multi_template",
  "debug",
  "std_collections",
  "loader",
] }
minijinja-autoreload = "2.0.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
