[package]
name = "bae-1mil-site"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "http2", "matched-path"] }
fs_extra = "1.3.0"
http = "1.1.0"
http-body-util = "0.1.2"
itertools = "0.13.0"
minijinja = { version = "2.1.1", default-features = false, features = [
  "builtins",
  "multi_template",
  "debug",
  "std_collections",
  "loader",
  "macros",
] }
minijinja-autoreload = "2.1.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "tracing",
] }
time = { version = "0.3.36", features = ["serde", "macros", "formatting"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.dev.build-override]
opt-level = 3
